--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,41 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: url("https://blackgold.sa/wp-content/uploads/2018/02/2560x1440-blue-abstract-noise-free-website-background-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .images {
-    background: yellowgreen;
-    flex: 0 0 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    flex: 0 0 50%;
     min-height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px;
+    box-shadow: 5px 10px black;
+}
+
+.btn {
+    background: white;
+    color: black;
+    border: 3px solid green;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 20%;
+    box-shadow: 2px 5px black;
+    outline: none;
+}
+
+.btn:active {
+    background: grey;
+    box-shadow: 1px 1px grey;
+}
+
+.btn:hover {
+    background: green;
+    color: white;
 }
